--- a/site/package.json
+++ b/site/package.json
@@ -18,6 +18,8 @@
     "method-override": "^3.0.0",
     "multer": "^1.4.2"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "nodemon": "^2.0.12"
+  },
   "description": ""
 }
