--- a/site/package.json
+++ b/site/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "site",
+  "name": "deportshopia",
   "version": "1.0.0",
   "private": true,
   "scripts": {
     "start": "nodemon ./src/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": ["DigitalHouse","html", "css", "express", "nodejs"],
+  "author": "Jesus Aguirre",
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
@@ -21,5 +21,5 @@
   "devDependencies": {
     "nodemon": "^2.0.12"
   },
-  "description": ""
+  "description": "Proyecto integrador de curso Fullstack WebDev DigitalHouse"
 }
