--- a/site/package.json
+++ b/site/package.json
@@ -6,7 +6,13 @@
     "start": "nodemon ./src/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": ["DigitalHouse","html", "css", "express", "nodejs"],
+  "keywords": [
+    "DigitalHouse",
+    "html",
+    "css",
+    "express",
+    "nodejs"
+  ],
   "author": "Jesus Aguirre",
   "license": "ISC",
   "dependencies": {
@@ -19,7 +25,24 @@
     "multer": "^1.4.2"
   },
   "devDependencies": {
-    "nodemon": "^2.0.12"
+    "autoprefixer": "^10.3.1",
+    "cssnano": "^5.0.7",
+    "gulp": "^4.0.2",
+    "gulp-cli": "^2.3.0",
+    "gulp-concat": "^2.6.1",
+    "gulp-imagemin": "^7.1.0",
+    "gulp-notify": "^4.0.0",
+    "gulp-postcss": "^9.0.0",
+    "gulp-remove": "^1.3.2",
+    "gulp-rename": "^2.0.0",
+    "gulp-sass": "^5.0.0",
+    "gulp-sourcemaps": "^3.0.0",
+    "gulp-terser-js": "^5.2.2",
+    "gulp-webp": "^4.0.1",
+    "node-sass": "^6.0.1",
+    "nodemon": "^2.0.12",
+    "postcss": "^8.3.6",
+    "sass": "^1.37.5"
   },
   "description": "Proyecto integrador de curso Fullstack WebDev DigitalHouse"
 }
