--- a/site/package.json
+++ b/site/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "private": true,
   "description": "E-commerce, sell and buy pc parts",
-  "main": "./src/app.js",
+  "main": "./bin/www",
   "scripts": {
-    "start": "nodemon ./src/app.js",
+    "start": "nodemon -L ./bin/www",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -19,11 +19,16 @@
   "author": "Jesus Aguirre",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.5",
+    "debug": "^4.3.2",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
+    "express-session": "^1.17.2",
     "express-validator": "^6.12.1",
     "http-errors": "^1.8.0",
     "method-override": "^3.0.0",
+    "morgan": "^1.10.0",
     "multer": "^1.4.3",
     "mysql2": "^2.3.0",
     "sequelize": "^6.6.5",
