--- a/site/backend/package.json
+++ b/site/backend/package.json
@@ -39,10 +39,16 @@
     "cssnano": "^5.0.8",
     "gulp": "^4.0.2",
     "gulp-cli": "^2.3.0",
+    "gulp-concat": "^2.6.1",
+    "gulp-imagemin": "^8.0.0",
     "gulp-nodemon": "^2.5.0",
+    "gulp-notify": "^4.0.0",
     "gulp-postcss": "^9.0.0",
+    "gulp-rename": "^2.0.0",
     "gulp-sass": "^5.0.0",
     "gulp-sourcemaps": "^3.0.0",
+    "gulp-terser-js": "^5.2.2",
+    "gulp-webp": "^4.0.1",
     "node-sass": "^6.0.1",
     "nodemon": "^2.0.12",
     "postcss": "^8.3.6",
